[tool.poetry]
name = "alpine"
version = "0.1.0"
description = ""
authors = [
  "weihaolee <wl61@rice.edu>",
  "lechuanli <ll84@rice.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.0"
scanpy = "^1.10.3"
anndata = "^0.10.9"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
hyperopt = "^0.2.7"
pandas = "^2.2.3"
#torch = {version = "^2.4.1+cu124", source = "pytorch"}
kneed = "^0.8.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
