[tool.poetry]
name = "alpine"
version = "0.1.0"
description = "ALPINE is a semi-supervised non-negative matrix factorization (NMF) framework designed to effectively distinguish between multiple phenotypic conditions based on shared biological factors, while also providing direct interpretability of condition-associated genes."
authors = [
  "Wei-Hao Lee <steve24563@gmail.com>",
  "Wei-Hao Lee <wl61@rice.edu>",
  "Lechuan Li <ll84@rice.edu>",
  "Ruth Dannenfelser <rtdn@rice.edu>",
  "Vicky Yao <vy@rice.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.0"
scanpy = "^1.10.3"
anndata = "^0.10.9"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
hyperopt = "^0.2.7"
pandas = "^2.2.3"
kneed = "^0.8.5"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
